Fixed a design issue where the pagination's back button would not overlap correctly

--- a/src/styles/molecules/_molecules.pagination.scss
+++ b/src/styles/molecules/_molecules.pagination.scss
@@ -90,6 +90,10 @@
   .m-pagination__next {
     z-index: layer('auto');
   }
+
+  .m-pagination__prev + .m-pagination__next {
+    z-index: layer('base');
+  }
 }
 
 /**
